soup: Static compile fails with libsoup-3.0
Describe your issue
I can't compile in static Gstreamer with libsoup3 installed.
Expected Behavior
Run without error
meson --default-library=static builddir
meson compile -C builddir
Observed Behavior
Setup
- Operating System: Manjaro linux
- Device: Computer
- GStreamer Version: Latest commit
-
Command line:
meson --default-library=static builddir
Steps to reproduce the bug
- open terminal
- install libsoup3 (3.0.4-2 on my side)
- try to build in static Gstreamer:
meson --default-library=static builddir
meson compile -C builddir
Additional Information
Compile errors:
[1/13] Compiling C object subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouputils.c.o
FAILED: subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouputils.c.o
cc -Isubprojects/gst-plugins-good/ext/soup/libgstsoup.a.p -Isubprojects/gst-plugins-good/ext/soup -I../subprojects/gst-plugins-good/ext/soup -Isubprojects/gst-plugins-good -I../subprojects/gst-plugins-good -I../subprojects/gst-plugins-good/gst-libs -Isubprojects/gstreamer -I../subprojects/gstreamer -Isubprojects/gstreamer/libs -I../subprojects/gstreamer/libs -Isubprojects/gst-plugins-base/gst-libs -I../subprojects/gst-plugins-base/gst-libs -Isubprojects/gstreamer/gst -Isubprojects/gst-plugins-base/gst-libs/gst/tag -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/sysprof-4 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/libsoup-3.0 -fdiagnostics-color=always -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -O2 -g -fvisibility=hidden -fno-strict-aliasing -DG_DISABLE_DEPRECATED -Wmissing-declarations -Wredundant-decls -Wwrite-strings -Winit-self -Wmissing-include-dirs -Wno-multichar -Wvla -Wpointer-arith -Wmissing-prototypes -Wdeclaration-after-statement -Wold-style-definition -Waggregate-return -fPIC -pthread -DGST_STATIC_COMPILATION -DHAVE_CONFIG_H -DSTATIC_SOUP=3 -MD -MQ subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouputils.c.o -MF subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouputils.c.o.d -o subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouputils.c.o -c ../subprojects/gst-plugins-good/ext/soup/gstsouputils.c
In file included from ../subprojects/gst-plugins-good/ext/soup/gstsouputils.c:22:
../subprojects/gst-plugins-good/ext/soup/gstsouploader.h:47:3: error: unknown type name 'SoupURI'
47 | SoupURI *soup_uri;
| ^~~~~~~
[2/13] Compiling C object subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsoup.c.o
FAILED: subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsoup.c.o
cc -Isubprojects/gst-plugins-good/ext/soup/libgstsoup.a.p -Isubprojects/gst-plugins-good/ext/soup -I../subprojects/gst-plugins-good/ext/soup -Isubprojects/gst-plugins-good -I../subprojects/gst-plugins-good -I../subprojects/gst-plugins-good/gst-libs -Isubprojects/gstreamer -I../subprojects/gstreamer -Isubprojects/gstreamer/libs -I../subprojects/gstreamer/libs -Isubprojects/gst-plugins-base/gst-libs -I../subprojects/gst-plugins-base/gst-libs -Isubprojects/gstreamer/gst -Isubprojects/gst-plugins-base/gst-libs/gst/tag -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/sysprof-4 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/libsoup-3.0 -fdiagnostics-color=always -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -O2 -g -fvisibility=hidden -fno-strict-aliasing -DG_DISABLE_DEPRECATED -Wmissing-declarations -Wredundant-decls -Wwrite-strings -Winit-self -Wmissing-include-dirs -Wno-multichar -Wvla -Wpointer-arith -Wmissing-prototypes -Wdeclaration-after-statement -Wold-style-definition -Waggregate-return -fPIC -pthread -DGST_STATIC_COMPILATION -DHAVE_CONFIG_H -DSTATIC_SOUP=3 -MD -MQ subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsoup.c.o -MF subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsoup.c.o.d -o subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsoup.c.o -c ../subprojects/gst-plugins-good/ext/soup/gstsoup.c
In file included from ../subprojects/gst-plugins-good/ext/soup/gstsoup.c:23:
../subprojects/gst-plugins-good/ext/soup/gstsouploader.h:47:3: error: unknown type name 'SoupURI'
47 | SoupURI *soup_uri;
| ^~~~~~~
[3/13] Compiling C object subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsoupelement.c.o
FAILED: subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsoupelement.c.o
cc -Isubprojects/gst-plugins-good/ext/soup/libgstsoup.a.p -Isubprojects/gst-plugins-good/ext/soup -I../subprojects/gst-plugins-good/ext/soup -Isubprojects/gst-plugins-good -I../subprojects/gst-plugins-good -I../subprojects/gst-plugins-good/gst-libs -Isubprojects/gstreamer -I../subprojects/gstreamer -Isubprojects/gstreamer/libs -I../subprojects/gstreamer/libs -Isubprojects/gst-plugins-base/gst-libs -I../subprojects/gst-plugins-base/gst-libs -Isubprojects/gstreamer/gst -Isubprojects/gst-plugins-base/gst-libs/gst/tag -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/sysprof-4 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/libsoup-3.0 -fdiagnostics-color=always -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -O2 -g -fvisibility=hidden -fno-strict-aliasing -DG_DISABLE_DEPRECATED -Wmissing-declarations -Wredundant-decls -Wwrite-strings -Winit-self -Wmissing-include-dirs -Wno-multichar -Wvla -Wpointer-arith -Wmissing-prototypes -Wdeclaration-after-statement -Wold-style-definition -Waggregate-return -fPIC -pthread -DGST_STATIC_COMPILATION -DHAVE_CONFIG_H -DSTATIC_SOUP=3 -MD -MQ subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsoupelement.c.o -MF subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsoupelement.c.o.d -o subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsoupelement.c.o -c ../subprojects/gst-plugins-good/ext/soup/gstsoupelement.c
In file included from ../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.h:20,
from ../subprojects/gst-plugins-good/ext/soup/gstsoupelement.c:22:
../subprojects/gst-plugins-good/ext/soup/gstsouploader.h:47:3: error: unknown type name 'SoupURI'
47 | SoupURI *soup_uri;
| ^~~~~~~
[4/13] Compiling C object subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouphttpclientsink.c.o
FAILED: subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouphttpclientsink.c.o
cc -Isubprojects/gst-plugins-good/ext/soup/libgstsoup.a.p -Isubprojects/gst-plugins-good/ext/soup -I../subprojects/gst-plugins-good/ext/soup -Isubprojects/gst-plugins-good -I../subprojects/gst-plugins-good -I../subprojects/gst-plugins-good/gst-libs -Isubprojects/gstreamer -I../subprojects/gstreamer -Isubprojects/gstreamer/libs -I../subprojects/gstreamer/libs -Isubprojects/gst-plugins-base/gst-libs -I../subprojects/gst-plugins-base/gst-libs -Isubprojects/gstreamer/gst -Isubprojects/gst-plugins-base/gst-libs/gst/tag -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/sysprof-4 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/libsoup-3.0 -fdiagnostics-color=always -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -O2 -g -fvisibility=hidden -fno-strict-aliasing -DG_DISABLE_DEPRECATED -Wmissing-declarations -Wredundant-decls -Wwrite-strings -Winit-self -Wmissing-include-dirs -Wno-multichar -Wvla -Wpointer-arith -Wmissing-prototypes -Wdeclaration-after-statement -Wold-style-definition -Waggregate-return -fPIC -pthread -DGST_STATIC_COMPILATION -DHAVE_CONFIG_H -DSTATIC_SOUP=3 -MD -MQ subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouphttpclientsink.c.o -MF subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouphttpclientsink.c.o.d -o subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouphttpclientsink.c.o -c ../subprojects/gst-plugins-good/ext/soup/gstsouphttpclientsink.c
In file included from ../subprojects/gst-plugins-good/ext/soup/gstsouphttpclientsink.h:24,
from ../subprojects/gst-plugins-good/ext/soup/gstsouphttpclientsink.c:47:
../subprojects/gst-plugins-good/ext/soup/gstsouploader.h:47:3: error: unknown type name 'SoupURI'
47 | SoupURI *soup_uri;
| ^~~~~~~
[5/13] Compiling C object subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouploader.c.o
FAILED: subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouploader.c.o
cc -Isubprojects/gst-plugins-good/ext/soup/libgstsoup.a.p -Isubprojects/gst-plugins-good/ext/soup -I../subprojects/gst-plugins-good/ext/soup -Isubprojects/gst-plugins-good -I../subprojects/gst-plugins-good -I../subprojects/gst-plugins-good/gst-libs -Isubprojects/gstreamer -I../subprojects/gstreamer -Isubprojects/gstreamer/libs -I../subprojects/gstreamer/libs -Isubprojects/gst-plugins-base/gst-libs -I../subprojects/gst-plugins-base/gst-libs -Isubprojects/gstreamer/gst -Isubprojects/gst-plugins-base/gst-libs/gst/tag -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/sysprof-4 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/libsoup-3.0 -fdiagnostics-color=always -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -O2 -g -fvisibility=hidden -fno-strict-aliasing -DG_DISABLE_DEPRECATED -Wmissing-declarations -Wredundant-decls -Wwrite-strings -Winit-self -Wmissing-include-dirs -Wno-multichar -Wvla -Wpointer-arith -Wmissing-prototypes -Wdeclaration-after-statement -Wold-style-definition -Waggregate-return -fPIC -pthread -DGST_STATIC_COMPILATION -DHAVE_CONFIG_H -DSTATIC_SOUP=3 -MD -MQ subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouploader.c.o -MF subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouploader.c.o.d -o subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouploader.c.o -c ../subprojects/gst-plugins-good/ext/soup/gstsouploader.c
In file included from ../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:19:
../subprojects/gst-plugins-good/ext/soup/gstsouploader.h:47:3: error: unknown type name 'SoupURI'
47 | SoupURI *soup_uri;
| ^~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:82:3: error: unknown type name 'SoupURI'
82 | SoupURI *(*_soup_uri_new_2) (const char *);
| ^~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:83:3: error: unknown type name 'SoupURI'
83 | SoupURI *(*_soup_message_get_uri_2) (SoupMessage *);
| ^~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:84:35: error: unknown type name 'SoupURI'
84 | char *(*_soup_uri_to_string_2) (SoupURI *, gboolean);
| ^~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:87:29: error: unknown type name 'SoupURI'
87 | void (*_soup_uri_free_2) (SoupURI *);
| ^~~~~~~
In file included from /usr/lib/glib-2.0/include/glibconfig.h:9,
from /usr/include/glib-2.0/glib/gtypes.h:32,
from /usr/include/glib-2.0/glib/galloca.h:32,
from /usr/include/glib-2.0/glib.h:30,
from /usr/include/glib-2.0/gobject/gbinding.h:28,
from /usr/include/glib-2.0/glib-object.h:22,
from /usr/include/glib-2.0/gio/gioenums.h:28,
from /usr/include/glib-2.0/gio/giotypes.h:28,
from /usr/include/glib-2.0/gio/gio.h:26,
from /usr/include/libsoup-3.0/libsoup/soup-types.h:9,
from /usr/include/libsoup-3.0/libsoup/soup-auth.h:8,
from /usr/include/libsoup-3.0/libsoup/soup.h:11,
from ../subprojects/gst-plugins-good/ext/soup/gstsouploader.h:19,
from ../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:19:
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c: In function 'gst_soup_load_library':
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:54:80: error: 'GstSoupVTable' {aka 'struct _GstSoupVTable'} has no member named '_soup_uri_free_2'; did you mean '_soup_uri_new_2'?
54 | if (!g_module_symbol(module, G_STRINGIFY(name), (gpointer *)&G_PASTE(vtable->_, G_PASTE(name, G_PASTE(_, version))))) { \
| ^
/usr/include/glib-2.0/glib/gmacros.h:815:47: note: in definition of macro 'G_PASTE_ARGS'
815 | #define G_PASTE_ARGS(identifier1,identifier2) identifier1 ## identifier2
| ^~~~~~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:54:64: note: in expansion of macro 'G_PASTE'
54 | if (!g_module_symbol(module, G_STRINGIFY(name), (gpointer *)&G_PASTE(vtable->_, G_PASTE(name, G_PASTE(_, version))))) { \
| ^~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:229:9: note: in expansion of macro 'LOAD_VERSIONED_SYMBOL'
229 | LOAD_VERSIONED_SYMBOL (2, soup_uri_free);
| ^~~~~~~~~~~~~~~~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:54:78: error: 'GstSoupVTable' {aka 'struct _GstSoupVTable'} has no member named '_soup_uri_to_string_2'
54 | if (!g_module_symbol(module, G_STRINGIFY(name), (gpointer *)&G_PASTE(vtable->_, G_PASTE(name, G_PASTE(_, version))))) { \
| ^~
/usr/include/glib-2.0/glib/gmacros.h:815:47: note: in definition of macro 'G_PASTE_ARGS'
815 | #define G_PASTE_ARGS(identifier1,identifier2) identifier1 ## identifier2
| ^~~~~~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:54:64: note: in expansion of macro 'G_PASTE'
54 | if (!g_module_symbol(module, G_STRINGIFY(name), (gpointer *)&G_PASTE(vtable->_, G_PASTE(name, G_PASTE(_, version))))) { \
| ^~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:231:9: note: in expansion of macro 'LOAD_VERSIONED_SYMBOL'
231 | LOAD_VERSIONED_SYMBOL (2, soup_uri_to_string);
| ^~~~~~~~~~~~~~~~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c: In function 'gst_soup_uri_free':
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:394:31: error: 'GstSoupVTable' {aka 'struct _GstSoupVTable'} has no member named '_soup_uri_free_2'; did you mean '_soup_uri_new_2'?
394 | g_assert (gst_soup_vtable._soup_uri_free_2 != NULL);
| ^~~~~~~~~~~~~~~~
/usr/include/glib-2.0/glib/gmacros.h:1081:8: note: in definition of macro '_G_BOOLEAN_EXPR'
1081 | if (expr) \
| ^~~~
/usr/include/glib-2.0/glib/gtestutils.h:232:49: note: in expansion of macro 'G_LIKELY'
232 | if G_LIKELY (expr) ; else \
| ^~~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:394:5: note: in expansion of macro 'g_assert'
394 | g_assert (gst_soup_vtable._soup_uri_free_2 != NULL);
| ^~~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:395:21: error: 'GstSoupVTable' {aka 'struct _GstSoupVTable'} has no member named '_soup_uri_free_2'; did you mean '_soup_uri_new_2'?
395 | gst_soup_vtable._soup_uri_free_2 (uri->soup_uri);
| ^~~~~~~~~~~~~~~~
| _soup_uri_new_2
In file included from /usr/lib/glib-2.0/include/glibconfig.h:9,
from /usr/include/glib-2.0/glib/gtypes.h:32,
from /usr/include/glib-2.0/glib/galloca.h:32,
from /usr/include/glib-2.0/glib.h:30,
from /usr/include/glib-2.0/gobject/gbinding.h:28,
from /usr/include/glib-2.0/glib-object.h:22,
from /usr/include/glib-2.0/gio/gioenums.h:28,
from /usr/include/glib-2.0/gio/giotypes.h:28,
from /usr/include/glib-2.0/gio/gio.h:26,
from /usr/include/libsoup-3.0/libsoup/soup-types.h:9,
from /usr/include/libsoup-3.0/libsoup/soup-auth.h:8,
from /usr/include/libsoup-3.0/libsoup/soup.h:11,
from ../subprojects/gst-plugins-good/ext/soup/gstsouploader.h:19,
from ../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:19:
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c: In function 'gst_soup_uri_to_string':
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:413:30: error: 'GstSoupVTable' {aka 'struct _GstSoupVTable'} has no member named '_soup_uri_to_string_2'
413 | g_assert (gst_soup_vtable._soup_uri_to_string_2 != NULL);
| ^
/usr/include/glib-2.0/glib/gmacros.h:1081:8: note: in definition of macro '_G_BOOLEAN_EXPR'
1081 | if (expr) \
| ^~~~
/usr/include/glib-2.0/glib/gtestutils.h:232:49: note: in expansion of macro 'G_LIKELY'
232 | if G_LIKELY (expr) ; else \
| ^~~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:413:5: note: in expansion of macro 'g_assert'
413 | g_assert (gst_soup_vtable._soup_uri_to_string_2 != NULL);
| ^~~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouploader.c:414:27: error: 'GstSoupVTable' {aka 'struct _GstSoupVTable'} has no member named '_soup_uri_to_string_2'
414 | return gst_soup_vtable._soup_uri_to_string_2 (uri->soup_uri, FALSE);
| ^
[6/13] Compiling C object subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouphttpsrc.c.o
FAILED: subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouphttpsrc.c.o
cc -Isubprojects/gst-plugins-good/ext/soup/libgstsoup.a.p -Isubprojects/gst-plugins-good/ext/soup -I../subprojects/gst-plugins-good/ext/soup -Isubprojects/gst-plugins-good -I../subprojects/gst-plugins-good -I../subprojects/gst-plugins-good/gst-libs -Isubprojects/gstreamer -I../subprojects/gstreamer -Isubprojects/gstreamer/libs -I../subprojects/gstreamer/libs -Isubprojects/gst-plugins-base/gst-libs -I../subprojects/gst-plugins-base/gst-libs -Isubprojects/gstreamer/gst -Isubprojects/gst-plugins-base/gst-libs/gst/tag -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/sysprof-4 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/libsoup-3.0 -fdiagnostics-color=always -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -O2 -g -fvisibility=hidden -fno-strict-aliasing -DG_DISABLE_DEPRECATED -Wmissing-declarations -Wredundant-decls -Wwrite-strings -Winit-self -Wmissing-include-dirs -Wno-multichar -Wvla -Wpointer-arith -Wmissing-prototypes -Wdeclaration-after-statement -Wold-style-definition -Waggregate-return -fPIC -pthread -DGST_STATIC_COMPILATION -DHAVE_CONFIG_H -DSTATIC_SOUP=3 -MD -MQ subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouphttpsrc.c.o -MF subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouphttpsrc.c.o.d -o subprojects/gst-plugins-good/ext/soup/libgstsoup.a.p/gstsouphttpsrc.c.o -c ../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c
In file included from ../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.h:20,
from ../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c:82:
../subprojects/gst-plugins-good/ext/soup/gstsouploader.h:47:3: error: unknown type name 'SoupURI'
47 | SoupURI *soup_uri;
| ^~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c: In function 'gst_soup_http_src_parse_status':
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c:1615:7: warning: implicit declaration of function 'SOUP_STATUS_IS_TRANSPORT_ERROR'; did you mean 'SOUP_STATUS_IS_SERVER_ERROR'? [-Wimplicit-function-declaration]
1615 | if (SOUP_STATUS_IS_TRANSPORT_ERROR (status_code)) {
| ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| SOUP_STATUS_IS_SERVER_ERROR
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c:1617:12: error: 'SOUP_STATUS_CANT_RESOLVE' undeclared (first use in this function); did you mean 'SOUP_STATUS_BAD_REQUEST'?
1617 | case SOUP_STATUS_CANT_RESOLVE:
| ^~~~~~~~~~~~~~~~~~~~~~~~
| SOUP_STATUS_BAD_REQUEST
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c:1617:12: note: each undeclared identifier is reported only once for each function it appears in
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c:1618:12: error: 'SOUP_STATUS_CANT_RESOLVE_PROXY' undeclared (first use in this function); did you mean 'SOUP_STATUS_USE_PROXY'?
1618 | case SOUP_STATUS_CANT_RESOLVE_PROXY:
| ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| SOUP_STATUS_USE_PROXY
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c:1622:12: error: 'SOUP_STATUS_CANT_CONNECT' undeclared (first use in this function); did you mean 'SOUP_STATUS_NO_CONTENT'?
1622 | case SOUP_STATUS_CANT_CONNECT:
| ^~~~~~~~~~~~~~~~~~~~~~~~
| SOUP_STATUS_NO_CONTENT
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c:1623:12: error: 'SOUP_STATUS_CANT_CONNECT_PROXY' undeclared (first use in this function)
1623 | case SOUP_STATUS_CANT_CONNECT_PROXY:
| ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c:1627:12: error: 'SOUP_STATUS_SSL_FAILED' undeclared (first use in this function); did you mean 'SOUP_STATUS_LOCKED'?
1627 | case SOUP_STATUS_SSL_FAILED:
| ^~~~~~~~~~~~~~~~~~~~~~
| SOUP_STATUS_LOCKED
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c:1631:12: error: 'SOUP_STATUS_IO_ERROR' undeclared (first use in this function); did you mean 'SOUP_STATUS_GONE'?
1631 | case SOUP_STATUS_IO_ERROR:
| ^~~~~~~~~~~~~~~~~~~~
| SOUP_STATUS_GONE
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c:1638:12: error: 'SOUP_STATUS_MALFORMED' undeclared (first use in this function); did you mean 'SOUP_STATUS_LOCKED'?
1638 | case SOUP_STATUS_MALFORMED:
| ^~~~~~~~~~~~~~~~~~~~~
| SOUP_STATUS_LOCKED
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c:1642:12: error: 'SOUP_STATUS_CANCELLED' undeclared (first use in this function); did you mean 'SOUP_STATUS_ACCEPTED'?
1642 | case SOUP_STATUS_CANCELLED:
| ^~~~~~~~~~~~~~~~~~~~~
| SOUP_STATUS_ACCEPTED
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c: In function 'gst_soup_http_src_build_message':
../subprojects/gst-plugins-good/ext/soup/gstsouphttpsrc.c:1773:38: error: 'SOUP_MESSAGE_OVERWRITE_CHUNKS' undeclared (first use in this function)
1773 | _soup_message_set_flags (src->msg, SOUP_MESSAGE_OVERWRITE_CHUNKS |
| ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.